# texloom

./: .gitignore  LICENSE  README.md  ROADMAP.md  codecov.yml
.github/workflows/: ci.yml  optimization.md
app/: CMakeLists.txt
app/resources/templates/: README.md  article.latex  report.latex  thesis.latex
app/src/: main.cpp
app/src/core/: ConversionEngine.cpp  ConversionEngine.h  ProjectModel.cpp  ProjectModel.h
app/src/ui/: EditorWidget.cpp  EditorWidget.h  MainWindow.cpp  MainWindow.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  NewProjectDialog.cpp  NewProjectDialog.h  PreviewWidget.cpp  PreviewWidget.h  ProjectTreeWidget.cpp  ProjectTreeWidget.h
app/tests/: CMakeLists.txt  README.md  test_conversion_engine.cpp  test_editor_widget.cpp  test_example.cpp  test_main_window.cpp  test_new_project_dialog.cpp  test_preview_widget.cpp  test_project_model.cpp  test_project_tree_widget.cpp
docs/: coding-style.md  dependencies.md  interfaces.md  menus-and-actions.md  testing.md
scripts/: install-deps.sh
